Inserção da estilização nos componentes da nav.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="">Tire suas dúvidas</a>
+                        <a href="#" style="text-decoration: none; color: #fafafa;">Tire suas dúvidas</a>
                     </li>
                 </ul>
             </nav>
@@ -61,10 +61,13 @@
                     </svg>
                     Descontos de até <strong>65%</strong> com o seu cartão de crédito do C6 Bank
                 </a>
-                <h1>Um banco transparente, completo e com sua cara</h1>
-                <h2>Conta digital e cartão de crédito gratuito. Saques e transferências sem tarifas.</h2>
-                <button>NOSSOS PRODUTOS</button>
+                <h1>Um banco transparente, completo e com a sua cara</h1>
+                <h2>Conta digital e cartão de crédito gratuitos.
+                    <span>Saques e transferências sem tarifa.</span>
+                </h2>
+                <a class="botao-produtos" href="#">NOSSOS PRODUTOS</a>
             </div>
+            <h1>Teste</h1>
         </div>
     </section>
 
