iImplementação do hover na barra de navegação

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </header>
         <div class="container">
             <nav>
-                <ul>
-                    <li>
+                <ul class="navegacao">
+                    <li class="navegacao-li">
                         <p>Para você</p>
-                        <ul style="display: none;">
+                        <ul class="links">
                             <li><a href="#"> TIM - Benefícios exclusivos </a></li>
                             <li><a href="#"> Cartões - Crédito e débito </a></li>
                             <li><a href="#"> Conta Global - Conta internacional </a></li>
@@ -35,9 +35,9 @@
                             <li><a href="#"> Átomos - Programa de pontos </a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="navegacao-li">
                         <p>Para seu negócio</p>
-                        <ul style="display: none;">
+                        <ul class="links" >
                             <li><a href="#"> Conta grátis - MEI </a></li>
                             <li><a href="#"> C6 Pay - Máquininha </a></li>
                             <li><a href="#"> Conta grátis - PJ </a></li>
@@ -46,7 +46,7 @@
                             <li><a href="#"> C6 Kick - Transferência via SMS </a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="navegacao-li">
                         <a href="#" style="text-decoration: none; color: #fafafa;">Tire suas dúvidas</a>
                     </li>
                 </ul>
@@ -67,7 +67,6 @@
                 </h2>
                 <a class="botao-produtos" href="#">NOSSOS PRODUTOS</a>
             </div>
-            <h1>Teste</h1>
         </div>
     </section>
 
