--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
             <div>
                 <a class="link-desconto" href="#">
                     <span>NOVO</span>
-                    <strong>Dia dos Pais</strong>
-                    <svg fill="#ffce2e" height="24" width="24">
-                        <path
-                            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
-                    </svg>
-                    Descontos de até <strong>65%</strong> com o seu cartão de crédito do C6 Bank
+                    <div class="texto-botao-desconto">
+                        <strong class="dia-pais">Dia dos Pais </strong>
+                        <svg fill="#ffce2e" height="24" width="24">
+                            <path
+                                d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                        </svg>
+                        <p>Descontos de até <strong>65%</strong> com o seu cartão de crédito do C6 Bank</p>
+                    </div>
                 </a>
                 <h1>Um banco transparente, completo e com a sua cara</h1>
                 <h2>Conta digital e cartão de crédito gratuitos.
