Inserção inicial do menu

--- a/index.html
+++ b/index.html
@@ -24,11 +24,45 @@
 
             <a class="botao" href="#">Abra sua conta</a>
 
-            <svg viewBox="0 0 40 40" fill="#FFF">
-                <rect width="36" height="4" rx="2"></rect>
-                <rect width="36" height="4" rx="2"></rect>
-                <rect width="36" height="4" rx="2"></rect>
-            </svg>
+            <div class="botao-menu">
+                <input type="checkbox" id="checkbox-menu">
+                <label for="checkbox-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <div class="menu-lateral">
+                    <ul>
+                        <li>
+                            <p>Para você</p>
+                            <ul>
+                                <li><a href="#"> TIM - Benefícios exclusivos </a></li>
+                                <li><a href="#"> Cartões - Crédito e débito </a></li>
+                                <li><a href="#"> Conta Global - Conta internacional </a></li>
+                                <li><a href="#"> Conta Grátis - Pessoa física </a></li>
+                                <li><a href="#"> C6 Taggy - Pedágio sem filas </a></li>
+                                <li><a href="#"> C6 Kick - Transferência via SMS </a></li>
+                                <li><a href="#"> Átomos - Programa de pontos </a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p>Para seu negócio</p>
+                            <ul>
+                                <li><a href="#"> Conta grátis - MEI </a></li>
+                                <li><a href="#"> C6 Pay - Máquininha </a></li>
+                                <li><a href="#"> Conta grátis - PJ </a></li>
+                                <li><a href="#"> Web Banking - PJ </a></li>
+                                <li><a href="#"> C6 Taggy - Pedágio sem filas </a></li>
+                                <li><a href="#"> C6 Kick - Transferência via SMS </a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"">Tire suas dúvidas</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            
         </header>
         <div class="container">
             <nav>
@@ -83,6 +117,7 @@
             </div>
         </div>
     </section>
+    
 </body>
 
 </html>
